--- a/PruebaBansi/Views/Examen/Lista.cshtml
+++ b/PruebaBansi/Views/Examen/Lista.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-12 offset-sm-2">
         <h2>Lista examenes</h2>
-        <a asp-asp-controller="Examen" asp-action="Registro" class = "btn btn-success mb-3">Nuevo</a>
+        <a asp-asp-controller="Examen" asp-action="Registro" class="btn btn-success mb-3">Nuevo</a>
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -23,23 +23,13 @@
                         <td>@item.Nombre</td>
                         <td>@item.Descripcion</td>
                         <td>
-                            <a 
-                            asp-asp-controller="Examen" 
-                            asp-action="Consultar"
-                            asp-route-id="@item.IdExamen" 
-                            class = "btn btn-info">Consultar</a>
-                            <a 
-                            asp-asp-controller="Examen" 
-                            asp-action="Editar"
-                            asp-route-id="@item.IdExamen" 
-                            class = "btn btn-primary">Editar</a>
+                            <a asp-asp-controller="Examen" asp-action="Consultar" asp-route-id="@item.IdExamen"
+                                class="btn btn-info">Consultar</a>
+                            <a asp-asp-controller="Examen" asp-action="Editar" asp-route-id="@item.IdExamen"
+                                class="btn btn-primary">Editar</a>
 
-                            <a 
-                            asp-asp-controller="Examen" 
-                            asp-action="EliminarExamen"
-                            onclick="return confirmar()"
-                            asp-route-id="@item.IdExamen" 
-                            class = "btn btn-danger">Eliminar</a>
+                            <a asp-asp-controller="Examen" asp-action="EliminarExamen" onclick="return confirmar()"
+                                asp-route-id="@item.IdExamen" class="btn btn-danger">Eliminar</a>
                         </td>
                     </tr>
                 }
@@ -48,7 +38,7 @@
     </div>
 </div>
 
-@section Scripts{
+@section Scripts {
     <script>
         function confirmar() {
             return confirm("¿Desea eliminar el registro?");
